@@ -35,8 +35,8 @@
 #include <Liste_Champ_Generique.h>
 #include <Loi_Fermeture_Test.h>
 #include <Loi_horaire.h>
+#include <Milieu.h>
 #include <Parametre_equation.h>
-#include <Porosites.h>
 #include <Porosites_champ.h>
 #include <Postraitement.h>
 #include <Postraitements.h>
@@ -78,47 +78,50 @@ cl_timp inst14;verifie_pere(inst14);
 paroi_adiabatique inst15;verifie_pere(inst15);
 paroi_flux_impose inst16;verifie_pere(inst16);
 paroi_contact inst17;verifie_pere(inst17);
-paroi_contact_fictif inst18;verifie_pere(inst18);
-Conds_lim inst19;verifie_pere(inst19);
-Couplage_U inst20;verifie_pere(inst20);
-Debog_Pb inst21;verifie_pere(inst21);
-Debog_Pb_Wrapper inst22;verifie_pere(inst22);
-Diametre_hyd_champ inst23;verifie_pere(inst23);
-Discretisation inst24;verifie_pere(inst24);
-Discretiser inst25;verifie_pere(inst25);
-Domaine_dis inst26;verifie_pere(inst26);
-Equation inst27;verifie_pere(inst27);
-Format_Post inst28;verifie_pere(inst28);
-Format_Post_Lata inst29;verifie_pere(inst29);
-Format_Post_Lml inst30;verifie_pere(inst30);
-Format_Post_XYZ inst31;verifie_pere(inst31);
-Lecture_Champ inst32;verifie_pere(inst32);
-List_Equations_Scalaires_Passifs_Especes inst33;verifie_pere(inst33);
-Liste_Champ_Generique inst34;verifie_pere(inst34);
-Loi_Fermeture_Test inst35;verifie_pere(inst35);
-Loi_horaire inst36;verifie_pere(inst36);
-Parametre_equation inst37;verifie_pere(inst37);
-Porosites inst38;verifie_pere(inst38);
-Porosites_champ inst39;verifie_pere(inst39);
-Postraitement inst40;verifie_pere(inst40);
-Postraitements inst41;verifie_pere(inst41);
-Probleme_Couple inst42;verifie_pere(inst42);
-Resoudre inst43;verifie_pere(inst43);
-Schema_Temps inst44;verifie_pere(inst44);
-Solveur_Implicite inst45;verifie_pere(inst45);
-Solveur_Masse inst46;verifie_pere(inst46);
-Sonde inst47;verifie_pere(inst47);
-Sonde_Int inst48;verifie_pere(inst48);
-Sondes inst49;verifie_pere(inst49);
-Sondes_Int inst50;verifie_pere(inst50);
-Source inst51;verifie_pere(inst51);
-Source_Generique_P0_Elem inst52;verifie_pere(inst52);
-Sources inst53;verifie_pere(inst53);
-Sous_zone_dis inst54;verifie_pere(inst54);
-Sous_zones_dis inst55;verifie_pere(inst55);
-Testeur inst56;verifie_pere(inst56);
-Value_Input_Int inst57;verifie_pere(inst57);
-Zone_Cl_dis inst58;verifie_pere(inst58);
-Zone_dis inst59;verifie_pere(inst59);
-Zones_dis inst60;verifie_pere(inst60);
+paroi_contact_rayo inst18;verifie_pere(inst18);
+paroi_contact_fictif inst19;verifie_pere(inst19);
+paroi_contact_fictif_rayo inst20;verifie_pere(inst20);
+Conds_lim inst21;verifie_pere(inst21);
+Couplage_U inst22;verifie_pere(inst22);
+Debog_Pb inst23;verifie_pere(inst23);
+Debog_Pb_Wrapper inst24;verifie_pere(inst24);
+Diametre_hyd_champ inst25;verifie_pere(inst25);
+Discretisation inst26;verifie_pere(inst26);
+Discretiser inst27;verifie_pere(inst27);
+Domaine_dis inst28;verifie_pere(inst28);
+Equation inst29;verifie_pere(inst29);
+Format_Post inst30;verifie_pere(inst30);
+Format_Post_Lata inst31;verifie_pere(inst31);
+Format_Post_Lml inst32;verifie_pere(inst32);
+Format_Post_XYZ inst33;verifie_pere(inst33);
+Lecture_Champ inst34;verifie_pere(inst34);
+List_Equations_Scalaires_Passifs_Especes inst35;verifie_pere(inst35);
+Liste_Champ_Generique inst36;verifie_pere(inst36);
+Loi_Fermeture_Test inst37;verifie_pere(inst37);
+Loi_horaire inst38;verifie_pere(inst38);
+Milieu inst39;verifie_pere(inst39);
+Parametre_equation inst40;verifie_pere(inst40);
+Porosites_champ inst41;verifie_pere(inst41);
+Porosites inst42;verifie_pere(inst42);
+Postraitement inst43;verifie_pere(inst43);
+Postraitements inst44;verifie_pere(inst44);
+Probleme_Couple inst45;verifie_pere(inst45);
+Resoudre inst46;verifie_pere(inst46);
+Schema_Temps inst47;verifie_pere(inst47);
+Solveur_Implicite inst48;verifie_pere(inst48);
+Solveur_Masse inst49;verifie_pere(inst49);
+Sonde inst50;verifie_pere(inst50);
+Sonde_Int inst51;verifie_pere(inst51);
+Sondes inst52;verifie_pere(inst52);
+Sondes_Int inst53;verifie_pere(inst53);
+Source inst54;verifie_pere(inst54);
+Source_Generique_P0_Elem inst55;verifie_pere(inst55);
+Sources inst56;verifie_pere(inst56);
+Sous_zone_dis inst57;verifie_pere(inst57);
+Sous_zones_dis inst58;verifie_pere(inst58);
+Testeur inst59;verifie_pere(inst59);
+Value_Input_Int inst60;verifie_pere(inst60);
+Zone_Cl_dis inst61;verifie_pere(inst61);
+Zone_dis inst62;verifie_pere(inst62);
+Zones_dis inst63;verifie_pere(inst63);
 }
